--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "license": "MIT",
   "devDependencies": {
     "vuepress": "^1.5.3"
+  },
+  "dependencies": {
+    "moment": "^2.27.0",
+    "vue-moment": "^4.1.0"
   }
 }
